kubernetes/nginx/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: nginx-deployment 
  namespace: nginx
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: nginx

  template: 
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx

    spec: 
      containers: 
      - name: nginx
        image: nginx:latest
        ports: 
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        volumeMounts: 
        - mountPath: /usr/share/nginx/html
          name: my-volume
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: local-pvc
